[gd_scene load_steps=2 format=3 uid="uid://ddhgoxw3qii8f"]

[ext_resource type="Script" uid="uid://8ryqxyb5w6q8" path="res://pong_game.gd" id="1_gb030"]

[node name="pong_game" type="Node2D"]
script = ExtResource("1_gb030")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.11764706, 0.11764706, 0.11764706, 1)

[node name="CenterLine" type="ColorRect" parent="."]
clip_contents = true
offset_left = 398.0
offset_right = 402.0
offset_bottom = 600.0

[node name="LeftPaddle" type="ColorRect" parent="."]
offset_left = 50.0
offset_top = 250.0
offset_right = 70.0
offset_bottom = 350.0

[node name="RightPaddle" type="ColorRect" parent="."]
offset_left = 730.0
offset_top = 250.0
offset_right = 750.0
offset_bottom = 350.0

[node name="Ball" type="ColorRect" parent="."]
offset_left = 390.0
offset_top = 290.0
offset_right = 410.0
offset_bottom = 310.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0
text = "0"
